--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi[standard]>=0.121.0",
+    "jinja2>=3.1.6",
     "pandas>=2.3.3",
     "plotly>=6.4.0",
 ]
